...
/////////////////////// PLANTAS //////////////////////////////
    val plant1 = Plant(name = "Manzana", scientificName = "Malus domestica", description = "Es una fruta de forma redondeada, con una piel suave y brillante que puede variar en color desde el verde al rojo, pasando por diferentes tonalidades intermedias. Es una fruta muy popular y versátil, utilizada tanto en postres como en platos salados, y es conocida por su sabor dulce y refrescante.", imageUr
    val plant2 = Plant(name = "Pimiento Morrón", scientificName = "Capsicum annuum", description = "Se caracteriza por su forma gruesa y carnosa, con una piel brillante y un sabor suave y dulce. Los pimientos morrones suelen tener colores que van desde el verde al rojo, pasando por el amarillo y el naranja, dependiendo de su grado de madurez. Son muy apreciados en la cocina por su versatilidad y s
    val plant3 = Plant(name = "Maíz", scientificName = "Zea mays", description = " El maíz es una planta cultivada ampliamente por sus mazorcas comestibles, que son una fuente importante de nutrientes como carbohidratos, proteínas y fibra. Es utilizado en una variedad de formas, desde alimentos básicos hasta ingredientes industriales.", imageUrl = "URL de la imagen", difficulty = Difficulty.FACIL,
    val plant4 = Plant(name = "Arándanos", scientificName = "Vaccinium corymbosum", description = " Los arándanos son pequeñas bayas de color azul oscuro que crecen en arbustos de hoja perenne. Son conocidos por su sabor dulce y ligeramente ácido, así como por su alto contenido de antioxidantes y nutrientes beneficiosos para la salud.", imageUrl = "URL de la imagen", difficulty = Difficulty.FACIL,
...
    val plant6 = Plant(name = "Cereza", scientificName = "Prunus cerasus", description = "Las cerezas son frutas pequeñas y redondas que crecen en árboles caducifolios del género Prunus. Existen dos tipos principales de cerezas: las dulces y las ácidas. Las cerezas dulces son conocidas por su sabor suave y dulce, mientras que las cerezas ácidas tienen un sabor más ácido y se utilizan comúnmente en
    val plant7 = Plant(name = "Melocotón", scientificName = "Prunus persica", description = " El melocotón es una fruta de pulpa suave y jugosa que crece en el árbol del mismo nombre. Conocido por su piel aterciopelada y su sabor dulce y aromático, el melocotón es una fruta popular en muchas partes del mundo. ", imageUrl = "URL de la imagen", difficulty = Difficulty.FACIL, care = cuidadoMelocoton)
    val plant8 = Plant(name = "Patata", scientificName = "Solanum tuberosum", description = " La patata es un tubérculo comestible que pertenece a la familia de las solanáceas. Es una de las principales fuentes de carbohidratos en la dieta humana y se consume en todo el mundo en una amplia variedad de platos.", imageUrl = "URL de la imagen", difficulty = Difficulty.FACIL, care = cuidadoPatata)
    val plant9 = Plant(name = "Haba de Soja", scientificName = "Glycine max", description = "La haba de soja, también conocida como soja o frijol de soja, es una leguminosa originaria de Asia oriental que se cultiva ampliamente por sus semillas comestibles ricas en proteínas y aceites vegetales.", imageUrl = "URL de la imagen", difficulty = Difficulty.ALTA, care = cuidadoHabaDeSoja)
    val plant10 = Plant(name = "Frambuesa", scientificName = "Rubus idaeus", description = "La frambuesa es una pequeña fruta roja que crece en arbustos del género Rubus. Conocida por su sabor dulce y ligeramente ácido, la frambuesa es una fruta muy apreciada en la cocina por su versatilidad y su capacidad para realzar una amplia variedad de platos.", imageUrl = "URL de la imagen", difficulty = Di
...
    val sarna = Illness(name = "Sarna", description = "La sarna es una enfermedad fúngica común en árboles frutales como manzanos y perales. Se caracteriza por la formación de manchas en las hojas y frutos, lo que puede afectar su crecimiento y calidad.", imageUrl = "", care = cuidadoSarna)
    val oxido = Illness(name = "Óxido", description = "El óxido es una enfermedad fúngica que afecta a diversas plantas, incluyendo cereales, rosas y árboles frutales. Se manifiesta como manchas de color naranja o marrón en las hojas y puede debilitar la planta si no se controla.", imageUrl = "", care = cuidadoOxido)
    val oidio = Illness(name = "Oídio", description = "El oídio es una enfermedad causada por hongos que afecta a una amplia variedad de plantas, incluyendo rosas, calabazas y vid. Se caracteriza por el crecimiento de un polvo blanco o grisáceo en las hojas, tallos y flores.", imageUrl = "", care = cuidadoOidio)
    val tizon = Illness(name = "Tizón", description = "El tizón es una enfermedad fúngica que afecta a muchas plantas cultivadas, incluyendo maíz, patatas y tomates. Se manifiesta como manchas oscuras en las hojas y puede causar daños significativos si no se trata adecuadamente.", imageUrl = "", care = cuidadoTizon)
    val manchaBacteriana = Illness(name = "Mancha bacteriana", description = "La mancha bacteriana es una enfermedad causada por bacterias que afecta a plantas como tomates, pimientos y pepinos. Se caracteriza por la formación de manchas húmedas y oscuras en las hojas y frutos, lo que puede llevar a la pudrición de estos tejidos.", imageUrl = "", care = cuidadoManchaBacteriana)
    val manchaFoliar = Illness(name = "Mancha foliar", description = "La mancha foliar es una enfermedad fúngica que afecta a una amplia gama de plantas, desde árboles frutales hasta cultivos de hortalizas. Se presenta como manchas circulares o irregulares en las hojas, que pueden expandirse y fusionarse si las condiciones son favorables.", imageUrl = "", care = cuidadoManchaFoliar)
    val virusMosaico = Illness(name = "Virus del mosaico", description = "El virus del mosaico es una enfermedad viral que afecta a muchas plantas, incluyendo tomates, pepinos y calabacines. Se manifiesta como un moteado característico en las hojas, que puede reducir la capacidad de la planta para realizar la fotosíntesis y afectar su rendimiento.", imageUrl = "", care = cuidadoVirusMosaico)
    val virusRizadoAmarillo = Illness(name = "Virus rizado amarillo", description = "El virus rizado amarillo es una enfermedad viral que afecta a diversas plantas cultivadas, incluyendo tomates, patatas y remolachas. Se caracteriza por el amarillamiento y deformación de las hojas, así como la reducción en el rendimiento de la planta.", imageUrl = "", care = cuidadoVirusRizadoAmarillo)
    val moho = Illness(name = "Moho", description = "El moho es una enfermedad fúngica que afecta a muchas plantas, incluyendo hortalizas, árboles frutales y plantas ornamentales. Se manifiesta como un crecimiento micelial blanco, gris o negro en las hojas, tallos o frutos, lo que puede causar la pudrición de los tejidos.", imageUrl = "", care = cuidadoMoho)
    val podredumbreNegra = Illness(name = "Podredumbre negra", description = "La podredumbre negra es una enfermedad causada por hongos que afecta a diversas plantas, incluyendo vides, tomates y fresas. Se caracteriza por la descomposición de los tejidos, que adquieren un color oscuro o negro, y puede propagarse rápidamente en condiciones húmedas.", imageUrl = "", care = cuidadoPodredumbreNegra)

...
