...
                .clip(shape = MaterialTheme.shapes.medium)
                .clipToBounds()
                .clickable {
                    onClick()
                    isImageClicked = !isImageClicked
                }
                .testTag("favorite"),
            contentAlignment = Alignment.TopStart
        ) {
            // Ajusta el tamaño y la posición de la imagen superpuesta
            val scaleX: Float = if (clickedImageUrl == R.drawable.hearth) 1.9F else 1.0F
            val scaleY:Float  = if (clickedImageUrl == R.drawable.hearth) 1.9F else 1.0F

...
