...
                                SecondaryIndicator(
                                    modifier = Modifier.tabIndicatorOffset(tabPositions[pagerState.currentPage]),
                                    color = Color(59, 170, 0, 255),
                                )
                            }
                        ) {
                            listOf("Detalles", "Opiniones").forEachIndexed { index, title ->
                                Tab(
                                    text = { Text(title, color = Color.Black) },
                                    selected = pagerState.currentPage == index,
                                    onClick = {
                                        coroutineScope.launch {
                                            pagerState.animateScrollToPage(index)
...
        }
        if (showLoginWarning) {
            Box(
                modifier = Modifier.fillMaxWidth(),
                contentAlignment = Alignment.Center
            ) {
                Text(text = "Inicia sesión para añadir una opinión", color = Color.Red)
            }
        }

        Spacer(modifier = Modifier.height(4.dp))

        OpinionsSection(navigator,opinions.value)
...
